# spa-router-with-react

./: Cargo.toml
src/: main.rs
static/: asset-manifest.json  index.html
static/static/js/: 787.35431b7f.chunk.js  787.35431b7f.chunk.js.map  main.9ea1ae09.js  main.9ea1ae09.js.map
